[gd_scene load_steps=37 format=3 uid="uid://c7kdam7k40n2p"]

[ext_resource type="Script" path="res://scenes/enemies/bosses/brute.gd" id="1_rka7u"]
[ext_resource type="Texture2D" uid="uid://rplh7wf4af4a" path="res://sprites/enemies/bosses/demonBrute_Spritesheet.png" id="2_7i8fu"]
[ext_resource type="Script" path="res://scenes/states/state_machine.gd" id="3_klao5"]
[ext_resource type="Script" path="res://scenes/states/enemy-states/enemy_pause_state.gd" id="4_t2vej"]
[ext_resource type="Script" path="res://scenes/states/enemy-states/enemy_charge_state.gd" id="5_e8788"]
[ext_resource type="Script" path="res://scenes/states/enemy-states/enemy_melee_attack_state.gd" id="6_jgw1i"]
[ext_resource type="Script" path="res://scenes/states/enemy-states/enemy_walk_state.gd" id="7_0p6dc"]
[ext_resource type="Script" path="res://scenes/states/enemy-states/enemy_bonk_state.gd" id="8_o4bkf"]
[ext_resource type="PackedScene" uid="uid://bmkdakrytelos" path="res://scenes/states/enemy-states/enemy_jump_state.tscn" id="9_5wulk"]
[ext_resource type="PackedScene" uid="uid://npaf5qqcnowv" path="res://scenes/states/enemy-states/enemy_aerial_state.tscn" id="10_vkj57"]
[ext_resource type="PackedScene" uid="uid://caiuc4hnlt3ij" path="res://scenes/states/enemy-states/enemy_land_state.tscn" id="11_l40wd"]
[ext_resource type="Script" path="res://scenes/states/enemy-states/enemy_death_state.gd" id="12_lk5gq"]
[ext_resource type="AudioStream" uid="uid://de5qd8edsmof8" path="res://sfx/swoosh 8.wav" id="13_jobgi"]
[ext_resource type="AudioStream" uid="uid://dg40v0i1q78rq" path="res://sfx/steps/bounce on 1.wav" id="14_y80vk"]
[ext_resource type="AudioStream" uid="uid://bpxyk0i1ac7j6" path="res://sfx/steps/bounce on 2.wav" id="15_ytn7r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7iag4"]
size = Vector2(73, 78)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x852q"]
size = Vector2(69, 142)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bxbld"]
size = Vector2(122, 87)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xn2q3"]
size = Vector2(413, 60)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jmu12"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_nijk3"]
_data = [Vector2(0.269663, 0.868132), 0.0, 0.0, 0, 0, Vector2(0.764045, 0.571429), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_vs6jd"]
offsets = PackedFloat32Array(0, 0.473333, 0.74, 1)
colors = PackedColorArray(0.180005, 0.180005, 0.180005, 1, 0.261955, 0.261955, 0.261955, 1, 0.529869, 0.529869, 0.529869, 1, 1, 1, 1, 1)

[sub_resource type="Curve" id="Curve_ypjcv"]
max_value = 200.0
_data = [Vector2(0, 200), 0.0, 0.0, 0, 0, Vector2(0.466292, 118.681), -1147.55, -1147.55, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Animation" id="Animation_pwkg4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/AttackBoxes/Punch:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/AttackBoxes/Punch:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/AttackBoxes/Charge:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot/AttackBoxes/Charge:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:shape")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_7iag4")]
}

[sub_resource type="Animation" id="Animation_a7452"]
resource_name = "aerial"
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 155]
}

[sub_resource type="Animation" id="Animation_lys0j"]
resource_name = "bonk"
length = 0.250008
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [120]
}

[sub_resource type="Animation" id="Animation_7dwm6"]
resource_name = "charge"
length = 2.00001
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25, 1.33333, 1.41667, 1.5, 1.58333, 1.66667, 1.75, 1.83333, 1.91667, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 95]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/AttackBoxes/Charge:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/AttackBoxes/Charge:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1.03526, 0.965936),
"update": 1,
"values": [SubResource("RectangleShape2D_7iag4"), SubResource("RectangleShape2D_7iag4")]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sounds/BounceOn1")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.333333, 1.33333),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sounds/BounceOn2")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.833333, 1.83333),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sounds/Concrete1")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.333333, 0.833333, 1.33333, 1.83333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_rh1yf"]
resource_name = "death"
length = 2.00001
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25, 1.33333, 1.41667, 1.5, 1.58333, 1.66667, 1.75, 1.83333, 1.91667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119]
}

[sub_resource type="Animation" id="Animation_uj6fm"]
resource_name = "fall"
length = 2.00001
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25, 1.33333, 1.41667, 1.5, 1.58333, 1.66667, 1.75, 1.83333, 1.91667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71]
}

[sub_resource type="Animation" id="Animation_o41b4"]
resource_name = "idle"
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ji0cr"]
resource_name = "jump1"
length = 0.250008
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [120, 121, 122, 123]
}

[sub_resource type="Animation" id="Animation_sdvp7"]
resource_name = "jump2"
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [124, 125, 126, 127, 128, 129, 130, 131]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sounds/Swoosh")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_mj4bc"]
resource_name = "land"
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sounds/Concrete1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_pqcr0"]
resource_name = "melee_attack"
length = 2.00001
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25, 1.33333, 1.41667, 1.5, 1.58333, 1.66667, 1.75, 1.83333, 1.91667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/AttackBoxes/Punch:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.08333, 1.41667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/AttackBoxes/Punch:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.08333, 1.41667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sounds/Swoosh")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.08333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_usfji"]
resource_name = "walk"
length = 2.00001
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25, 1.33333, 1.41667, 1.5, 1.58333, 1.66667, 1.75, 1.83333, 1.91667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sounds/BounceOn1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sounds/BounceOn2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1i38s"]
_data = {
"RESET": SubResource("Animation_pwkg4"),
"aerial": SubResource("Animation_a7452"),
"bonk": SubResource("Animation_lys0j"),
"charge": SubResource("Animation_7dwm6"),
"death": SubResource("Animation_rh1yf"),
"fall": SubResource("Animation_uj6fm"),
"idle": SubResource("Animation_o41b4"),
"jump1": SubResource("Animation_ji0cr"),
"jump2": SubResource("Animation_sdvp7"),
"land": SubResource("Animation_mj4bc"),
"melee_attack": SubResource("Animation_pqcr0"),
"walk": SubResource("Animation_usfji")
}

[node name="Brute" type="CharacterBody2D" node_paths=PackedStringArray("pivot", "left_feeler", "right_feeler")]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_rka7u")
health = 30
damage = 3
pivot = NodePath("Pivot")
left_feeler = NodePath("FloorFeelers/LeftFeeler")
right_feeler = NodePath("FloorFeelers/RightFeeler")
faces_player = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5.5, 25)
shape = SubResource("RectangleShape2D_7iag4")

[node name="Pivot" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
texture = ExtResource("2_7i8fu")
hframes = 13
vframes = 12

[node name="AttackBoxes" type="Node2D" parent="Pivot"]
visible = false

[node name="Punch" type="Area2D" parent="Pivot/AttackBoxes"]
visible = false
collision_layer = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AttackBoxes/Punch"]
position = Vector2(68, -6)
shape = SubResource("RectangleShape2D_x852q")

[node name="Charge" type="Area2D" parent="Pivot/AttackBoxes"]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AttackBoxes/Charge"]
position = Vector2(34, 19.5)
shape = SubResource("RectangleShape2D_bxbld")

[node name="RangeBoxes" type="Node2D" parent="Pivot"]
metadata/_edit_lock_ = true

[node name="PunchRange" type="Area2D" parent="Pivot/RangeBoxes"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/RangeBoxes/PunchRange"]
position = Vector2(70, -6)
shape = SubResource("RectangleShape2D_x852q")

[node name="ChargeRange" type="Area2D" parent="Pivot/RangeBoxes"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/RangeBoxes/ChargeRange"]
position = Vector2(173.5, 33)
shape = SubResource("RectangleShape2D_xn2q3")

[node name="FloorFeelers" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="LeftFeeler" type="RayCast2D" parent="FloorFeelers"]
position = Vector2(-67, 61)
collision_mask = 2

[node name="RightFeeler" type="RayCast2D" parent="FloorFeelers"]
position = Vector2(44, 60)
collision_mask = 2

[node name="Particles" type="Node2D" parent="."]

[node name="RightDust" type="CPUParticles2D" parent="Particles"]
material = SubResource("CanvasItemMaterial_jmu12")
position = Vector2(-10, 64)
emitting = false
amount = 200
lifetime = 0.7
one_shot = true
speed_scale = 2.0
explosiveness = 0.76
lifetime_randomness = 0.28
spread = 31.56
gravity = Vector2(100, -150)
initial_velocity_max = 100.0
scale_amount_min = 3.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_nijk3")
color_ramp = SubResource("Gradient_vs6jd")
hue_variation_max = 0.71
anim_speed_curve = SubResource("Curve_ypjcv")

[node name="LeftDust" type="CPUParticles2D" parent="Particles"]
material = SubResource("CanvasItemMaterial_jmu12")
position = Vector2(-21, 64)
emitting = false
amount = 200
lifetime = 0.7
one_shot = true
speed_scale = 2.0
explosiveness = 0.76
lifetime_randomness = 0.28
direction = Vector2(-1, 0)
spread = 31.56
gravity = Vector2(-100, -150)
initial_velocity_max = 100.0
scale_amount_min = 3.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_nijk3")
color_ramp = SubResource("Gradient_vs6jd")
hue_variation_max = 0.71
anim_speed_curve = SubResource("Curve_ypjcv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1i38s")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_klao5")
starting_state = NodePath("EnemyJumpState")

[node name="EnemyPauseState" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "animator", "pause_timer")]
script = ExtResource("4_t2vej")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")
pause_timer = NodePath("Timer")

[node name="Timer" type="Timer" parent="StateMachine/EnemyPauseState"]
one_shot = true

[node name="EnemyWalkState" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "animator", "walk_timer")]
script = ExtResource("7_0p6dc")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")
walk_timer = NodePath("Timer")
speed = 50

[node name="Timer" type="Timer" parent="StateMachine/EnemyWalkState"]
wait_time = 2.0
one_shot = true

[node name="EnemyChargeState" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "animator", "atk_area", "stupid_timer")]
script = ExtResource("5_e8788")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")
atk_area = NodePath("../../Pivot/AttackBoxes/Charge")
stupid_timer = NodePath("Timer")
charge_speed = 100

[node name="Timer" type="Timer" parent="StateMachine/EnemyChargeState"]
wait_time = 0.1
one_shot = true

[node name="EnemyBonkState" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("8_o4bkf")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")

[node name="EnemyMeleeAttackState" type="Node" parent="StateMachine" node_paths=PackedStringArray("attack_box", "actor", "animator")]
script = ExtResource("6_jgw1i")
attack_box = NodePath("../../Pivot/AttackBoxes/Punch")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")

[node name="EnemyJumpState" parent="StateMachine" node_paths=PackedStringArray("actor", "animator") instance=ExtResource("9_5wulk")]
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")

[node name="EnemyAerialState" parent="StateMachine" node_paths=PackedStringArray("actor", "animator") instance=ExtResource("10_vkj57")]
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")

[node name="EnemyLandState" parent="StateMachine" node_paths=PackedStringArray("left_particles", "right_particles", "actor", "animator") instance=ExtResource("11_l40wd")]
left_particles = NodePath("../../Particles/LeftDust")
right_particles = NodePath("../../Particles/RightDust")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")

[node name="EnemyDeathState" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("12_lk5gq")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")

[node name="Sounds" type="Node" parent="."]

[node name="Swoosh" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("13_jobgi")

[node name="Concrete1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("14_y80vk")

[node name="BounceOn1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("15_ytn7r")

[node name="BounceOn2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("15_ytn7r")
